--- a/views/index.html
+++ b/views/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <link rel="stylesheet" src="css/browser.css">
+
     <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" src="components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" src="css/normalize.css">
+    <link rel="stylesheet" src="css/skeleton.css">
 </head>
 <body>
 <div class="APP_ROOT">
